# trabalho-3-1-autocomplete-jopefd

./: .gitignore  CMakeLists.txt  README.md
autocomplete/: database.cpp  database.hpp  database_controller.cpp  database_controller.hpp  io.cpp  io.hpp  io_controller.cpp  io_controller.hpp  main.cpp  query.cpp  query.hpp  query_controller.hpp  user_interface.hpp  words_frequencies.hpp
data/: test.txt
